--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="masthead">
@@ -26,7 +27,7 @@
         <li><a href="contact_us.html">Contact Us</a></li>
       </ul>
       <div id="div1">
-        <img class="PI" src="pi.gif" alt="Parlin Industries"/>
+        <img class="PI" src="pi.gif" alt="Parlin Industries" id="mainPIpic"/>
       </div>
       <div id="div2">
         <div id="div2_text">
